# discord-bots.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: aliases.js  search-index.js
doc/discord_bot_list/: BotListingSort.t.html  DblBot.t.html  DblClient.t.html  DblSimpleUser.t.html  StatusError.t.html  enum.BotListingSort.html  static.API.html  struct.BotListing.html  struct.CustomizeWidget.html  struct.DblBot.html  struct.PostBotStats.html  struct.Snowflake.html
doc/discord_bots/: BotStats.t.html  ParamError.t.html  ServerCount.t.html  Snowflake.t.html  all.html  enum.ServerCount.html  static.API.html  struct.BotStats.html  struct.Client.html  struct.PostBotStats.html  struct.Snowflake.html
doc/discord_bots/listing/: BotList.t.html  sidebar-items.js
doc/discord_bots/webhook/: WebHookVote.t.html  (+3 more)
docs/: aliases.js  search-index.js
docs/discord_bot_list/: API.v.html  DblBotStats.t.html  DblUser.t.html  all.html  enum.ServerCount.html  index.html  sidebar-items.js  struct.BotList.html  struct.DblBotStats.html  struct.DblClient.html  struct.DblSimpleUser.html  struct.DblUser.html  struct.ParamError.html  struct.StatusError.html
docs/discord_bots/: PostBotStats.t.html  SimpleUser.t.html  all.html  enum.BotListingSort.html  enum.ServerCount.html  index.html  sidebar-items.js  static.API.html  struct.Bot.html  struct.BotList.html  struct.BotListing.html  struct.BotStats.html  struct.Client.html  struct.CustomizeWidget.html  struct.ParamError.html  struct.PostBotStats.html  struct.SimpleUser.html  struct.Snowflake.html  struct.StatusError.html  struct.User.html
src/: lib.rs
(+35 files in other folders)
