[package]
name = "discord_bots"
version = "1.0.0"
authors = ["Thomas-QM <thomas@engineeringvirtue.net>"]
readme = "./README.md"
license-file = "./LICENSE"
description = "API bindings for discordbots.org ...Not really tested... yet"
repository = "https://github.com/engineeringvirtue/discord-bots.rs"
documentation = "https://engineeringvirtue.github.io/discord-bots.rs/discord_bots/index.html"
keywords = ["discord", "bots", "list", "api", "bindings"]
categories = ["api-bindings"]

[dependencies]
chrono = {version="0.4.6", features=["serde"]}
failure = "0.1.3"
failure_derive = "0.1.3"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_urlencoded = "0.5.3"
reqwest = "0.9.4"

iron = {version = "0.6.0", optional = true}
serde_json = {version = "1.0.33", optional = true}

[features]
webhook = ["iron", "serde_json"]